# electrolyte_optimization

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
configs/: default_lcow.yaml
notebooks/: 01_weather_data_demo.ipynb
outputs/global_maps/: global_stats_2023_10deg.csv  global_stats_2023_20deg.csv
outputs/lcow_global/: lcow_random_sites.csv
reports/: status_update.tex
scripts/: global_weather_maps.py  lcow_random_global_map.py  run_lcow_opt.py
src/data/: __init__.py
src/data/re_ml_awh_discussion/calculate_mf/: calculate_mf_NH4NO3.m
src/data/re_ml_awh_discussion/data/: load_salt_data.m
src/data/salt_pricing/: __init__.py  salt_price_data.xlsx
src/data/weather/: __init__.py  client.py  geocoding.py
src/materials/: __init__.py  salt_prices.py  salts.py
src/models/: __init__.py  lcow_sawh.py  lcow_zsr_pyomo.py  salt_feasibility.py  salt_unified_model.py  zsr_lcow_model.py
src/optimization/: __init__.py  active_heating.py  brine_equilibrium.py  brine_uptake.py  climate.py  economics.py  heat_transfer.py  mf_equilibrium.py  solve.py  sorption.py  zsr_mixing.py
tests/: test_optimization_lcow.py  test_weather_client.py  test_zsr_mixing.py
