[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awh-optimization"
version = "0.1.0"
description = "Pyomo-based optimization of electrolytes and hydrogels for sorbent atmospheric water harvesting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Clara" }]

dependencies = [
    "pyomo>=6.7",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "openmeteo-requests>=1.2",
    "requests-cache>=1.2",
    "retry-requests>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
idaes = [
    "idaes-pse>=2.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
